# app

./: .gitignore  Cargo.toml
deploy/nginx/: neurovlm.conf  neurovlm.conf.template
deploy/systemd/: neurovlm.service.template
neurolm/: main.py
scripts/: deploy_server.sh  sort_latent_and_metadata_by_pmid.py  trace_models_from_safetensors.py  trace_specter2_encoder.py  update_publications_txt.py
src/: constants.rs  forward.rs  interpolate.rs  lib.rs  main.rs
static/: fsaverage_[inflated]_mg2_0d_v3.ctm  fsaverage_[inflated]_mg2_0d_v3.json  fsaverage_[inflated]_mg2_9_v3.json  index.html  index.js  links.txt  titles.txt
static/css/: styles.css
static/js/: CTMloader.js  WebGL-validator.js  jsplot-monkeypatch.js  lzma-worker.js  mriview-2.js  mriview-3.js
static/models/: abstracts.txt  aligner.safetensors  links.txt  pmids.txt  titles.txt
