[package]
name = "neurovlm"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.46.1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
rayon = "1.10.0"
serde = "1.0.219"
tower-http = { version = "0.5", features = ["fs"] }
ndarray = "0.16.1"
ndarray-npy = "0.9.1"
fs = "0.0.5"
safetensors = "0.6.0"
anyhow = "1.0.98"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
candle-core = "0.9.1"
tokenizers = "0.21.2"
serde_json = "1.0.141"
tch = "0.20.0"
